Prevent hovering animation on mobile

--- a/frontend/src/styles.module.css
+++ b/frontend/src/styles.module.css
@@ -11,7 +11,7 @@
   width: var(--button-width);
 }
 
-.button:hover,
+:global(no-touch).button:hover,
 .button:focus {
   color: white;
   background: var(--light-blue);
@@ -23,7 +23,7 @@
   cursor: not-allowed;
 }
 
-.button:hover:active {
+:global(no-touch).button:hover:active {
   background: var(--tng-blue);
 }
 
